#1505 | Exclude Spock specific `resources/META-INF/services` directory